# ChangeLog for media-libs/glut
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/glut/Attic/ChangeLog,v 1.7 2003/02/12 07:07:51 vapier Exp $

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
  02 Dec 2002; Martin Schlemmer <azarah@gentoo.org> glut-3.7{-r2,.1}.ebuild :

  Add 'preplib' to src_install to add missing libglut.so.3 symlink.  Closes
  bug #11440.

*glut-3.7.1 (30 Nov 2002)

  30 Nov 2002; Martin Schlemmer <azarah@gentoo.org> glut-3.7.1.ebuild :

  New version, closing bug #11375.  Added elibtoolize to normalize libglut.la
  without all the seds.

*glut-3.7-r2 (26 Feb 2002)

  26 Feb 2002; M.Schlemmer <azarah@gentoo.org> glut-3.7-r2.ebuild :

  Fix wacky paths in /usr/lib/libglut.la.

*glut-3.7-r1 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.