@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/glut/Attic/glut-3.7.1.ebuild,v 1.6 2003/02/13 12:44:33 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/glut/Attic/glut-3.7.1.ebuild,v 1.7 2003/03/09 19:58:40 agriffis Exp $
 
 inherit libtool
 
@@ -13,7 +13,7 @@ HOMEPAGE="http://www.opengl.org/developers/documentation/glut/"
 
 SLOT="0"
 LICENSE="X11 | GPL-2"
-KEYWORDS="x86 ~ppc ~sparc ~alpha"
+KEYWORDS="x86 ~ppc ~sparc alpha"
 
 DEPEND="virtual/opengl
 	virtual/glu"
